# PCAP

./: pyproject.toml
02intro/: python_padrao.py
03threads/: banco_inseguro.py  banco_seguro.py  com_threads.py  python_threads.py  thread_simples.py  threads_multiplas.py
04multiprocessamento/: abs_v1.py  abs_v3.py  com1.py  com2.py  computa.c  estados_processos_v1.py  estados_processos_v2.py  pool_python_v1.py  pool_python_v2.py  processo.py  python_multiprocessos.py  setup.py  sinc_processos_v1.py  sinc_processos_v2.py
05async/: as1.py  as2.py  as3.py  as_aiofiles.py  as_aiohttp.py  cor1.py  cor2.py  generator1.py  python_assync.py
06cython/: programa1.py  programa2.py  python_padrao1.py  python_padrao1.stats  python_padrao2.profile  setup.py
07fastapi/: main.py
